--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 
-  <h1>Калькулятор блоков</h1>
+  <h1 class="text-center">Калькулятор блоков</h1>
 
   <div class="container calc">
     <div class="row mb-2">
@@ -170,8 +170,8 @@
     </div>
     <div class="row" id="coppy">
       <div class="col">
-        <ul class="result"></ul>
-        <ul class="resultLogistics"></ul>
+        <ul class="result ps-0"></ul>
+        <ul class="resultLogistics ps-0"></ul>
         <div class="resultTotal"></div>
       </div>
     </div>
@@ -185,7 +185,8 @@
     <div class="row">
       <div class="col">
         <!-- <button class="btn w-100 mb-2  btn-info" data-modal="bridge" id="bridgeModal">Перемычки</button> -->
-        <button type="button" class="btn w-100 mb-2  btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        <button type="button" class="btn w-100 mb-2  btn-primary" data-bs-toggle="modal"
+          data-bs-target="#staticBackdrop">
           Перемычки
         </button>
 
@@ -206,8 +207,7 @@
           <div id="bridge">
             <div class="shadow"></div>
             <div>
-
-              <ul>
+              <ul class="ps-0">
               </ul>
             </div>
           </div>
