--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
   <br>
   <br>
   <br>
-  <br>
-  <br>
-  <br>
-  <br>
   <h1 class="text-center">Калькулятор блоков</h1>
 
   <div class="container calc">
@@ -94,22 +90,22 @@
     </div>
     <div class="row mb-2">
       <div class="col">
-        <button class="btn mb-2 w-100 btn-secondary" data-btnsetprice="5770">5770</button>
-        <button class="btn mb-2 w-100 btn-secondary" data-btnsetprice="5860">5860</button>
+        <button class="btn mb-2 w-100 btn-secondary" data-btnsetprice="5490">5490</button>
+        <button class="btn mb-2 w-100 btn-secondary" data-btnsetprice="5580">5580</button>
+        <button class="btn mb-2 w-100 btn-secondary" data-btnsetprice="5680">5680</button>
       </div>
       <div class="col">
+        <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="5770">5770</button>
+        <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="5860">5860</button>
         <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="5960">5960</button>
-        <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="6000">6000</button>
       </div>
       <div class="col">
-        <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="6560">6560</button>
+        <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="6136">6136</button>
+        <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="6240">6240</button>
+        <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="6350">6350</button>
+      </div>
+      <div class="col">
         <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="6975">6975</button>
-      </div>
-      <div class="col">
-        <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="7500">7500</button>
-        <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="6660">6660</button>
-      </div>
-      <div class="col">
         <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="7000">7000</button>
         <button class="btn w-100 mb-2  btn-secondary" data-btnsetprice="7800">7800</button>
       </div>
@@ -132,13 +128,14 @@
     </div>
 
     <div class="row mb-2">
+      <div class="col"><button class="mb-0 btn w-100 btn-warning" data-typeLogistics="glory">Триумф</button></div>
+      <div class="col d-none"><button class="hide mb-0 btn w-100 btn-warning" data-typeLogistics="tiana">Тиана</button>
+      </div>
+      <div class="col"><button class="mb-0 btn w-100 btn-warning" data-typeLogistics="my">Своя</button></div>
+    </div>
+    <div class="row mb-2" id="kmRow">
       <div class="col d-flex align-items-center"><label for="km">Км</label></div>
       <div class="col"><input class="form-control" type="number" name="km"></div>
-    </div>
-    <div class="row mb-2">
-      <div class="col"><button class="mb-0 btn w-100 btn-warning" data-typeLogistics="glory">Триумф</button></div>
-      <div class="col"><button class="mb-0 btn w-100 btn-warning" data-typeLogistics="tiana">Тиана</button></div>
-      <div class="col"><button class="mb-0 btn w-100 btn-warning" data-typeLogistics="my">Своя</button></div>
     </div>
 
     <div class="row mb-2">
@@ -241,18 +238,6 @@
       </div>
     </div>
   </div> -->
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
   <br>
   <br>
   <br>
