--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- <link rel="stylesheet" href="./reset.css" /> -->
+  <link rel="icon" href="./icons8-96.png" type="image/x-icon">
   <link rel="stylesheet" href="./bootstrap.min.css" />
   <link rel="stylesheet" href="./main.css" />
-  <title>КП</title>
+  <title>Калькулятор</title>
 </head>
 
 <body>
@@ -134,8 +134,40 @@
       <div class="col"><button class="mb-0 btn w-100 btn-warning" data-typeLogistics="my">Своя</button></div>
     </div>
     <div class="row mb-2" id="kmRow">
-      <div class="col d-flex align-items-center"><label for="km">Км</label></div>
-      <div class="col"><input class="form-control" type="number" name="km"></div>
+      <div class="col-2 d-flex align-items-center"><label for="km">Км</label></div>
+      <!-- <div class="col"><input class="form-control" type="number" name="km"></div> -->
+      <div class="col d-flex justify-content-between"><input class="form-control d-none" type="number" name="km">
+        <div class="form-check me-2">
+          <input class="form-check-input" type="radio" name="km" id="log30" value="1" checked>
+          <label class="form-check-label" for="log30">
+            0-30
+          </label>
+        </div>
+        <div class="form-check me-2">
+          <input class="form-check-input" type="radio" name="km" id="log45" value="31">
+          <label class="form-check-label" for="log45">
+            30-45
+          </label>
+        </div>
+        <div class="form-check me-2">
+          <input class="form-check-input" type="radio" name="km" id="log60" value="46">
+          <label class="form-check-label" for="log60">
+            45-60
+          </label>
+        </div>
+        <div class="form-check me-2">
+          <input class="form-check-input" type="radio" name="km" id="log90" value="61">
+          <label class="form-check-label" for="log90">
+            60-90
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="km" id="log120" value="91">
+          <label class="form-check-label" for="log120">
+            90-120
+          </label>
+        </div>
+      </div>
     </div>
 
     <div class="row mb-2">
@@ -222,7 +254,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
           <!-- <button type="button" class="btn btn-primary">Understood</button> -->
         </div>
       </div>
