--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- <input class="mb-0 form-control" type="number" disabled min="3" value="3" step="0.5" name="NCPersent"> -->
 
     <div class="row mb-2">
-      <div class="col"><button class="mb-0 btn w-100 btn-primary" id="btnAddRow">Добавить блок</button></div>
+      <div class="col"><button class="mb-0 btn w-100 btn-success" id="btnAddRow">Добавить блок</button></div>
     </div>
 
     <div class="row mb-2">
