--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@
       </div>
     </div>
     <div class="row">
+      <div class="col"><button class="btn w-100 mb-2  btn-info" data-calcGaly="calc">Рассчитать клей</button>
+      </div>
+    </div>
+    <div class="row">
       <div class="col"><button class="btn w-100 mb-2  btn-danger" onclick="reload()">Очистить</button> </div>
     </div>
     <div class="row">
@@ -281,7 +285,7 @@
 
   <!-- <script src="./js/bootstrap.min.js"></script> -->
   <script src="./js/bootstrap.bundle.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
