--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
   <!-- <script src="./js/bootstrap.min.js"></script> -->
   <script src="./js/bootstrap.bundle.js"></script>
-  <script src="./main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
